add simple docker